Compatibility to JDK 1.4 in head branch